--- a/compose/local/django/Dockerfile
+++ b/compose/local/django/Dockerfile
@@ -25,6 +25,7 @@ RUN chmod +x /entrypoint
 COPY ./compose/local/django/start /start
 RUN sed -i 's/\r$//g' /start
 RUN chmod +x /start
+EXPOSE 8000
 
 WORKDIR /app
 
